[package]
name = "minigraph"
version = "0.2.0"
edition = "2024"

[lib]
name = "minigraph"
path = "src/lib.rs"

[[bin]]
name = "minigraph-cli"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
anyhow = "1"
thiserror = "2.0.16"

[profile.release]
lto = true
codegen-units = 1
